--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "pg": "^8.5.1",
     "sequelize": "^6.5.0",
     "uuid": "^8.3.2"
   },
