--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.21",
     "jest": "^26.6.3",
     "sequelize-cli": "^6.2.0",
     "sequelize-mock": "^0.10.2"
