--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js",
-    "test": "jest"
+    "test": "jest --collectCoverage"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
